# AgentWonder

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_phase2.md  Claude_phase_1.md  README_v1.md  architecture_layout.md  pyproject.toml  requirements.txt  yaml_usage.md
agentwonder/: __init__.py  cli.py  logging.py  main.py
agentwonder/api/: __init__.py  routes_approvals.py  routes_health.py  routes_policies.py  routes_prompts.py  routes_runs.py  routes_templates.py  routes_tools.py  routes_workflows.py
agentwonder/compiler/: __init__.py  builder.py  loader.py  resolver.py  validators.py
agentwonder/observability/: __init__.py  evals.py  events.py  tracing.py
agentwonder/registry/: __init__.py  policies.py  prompts.py  templates.py  tools.py
agentwonder/runtime/: __init__.py  approvals.py  executor.py  llm_client.py  model_router.py  session_store.py  state_store.py
agentwonder/schemas/: __init__.py  common.py  policy.py  prompt.py  run.py  template.py  tool.py  workflow.py
agentwonder/tools/: __init__.py  auth.py  llm_tools.py  openapi_wrapper.py  rest_wrapper.py
config/tools/: classify_ticket.yaml  (+12 more)
docs/: AdentWonder.md  AgentWonder_Phase1_Architecture_DeepDive.pptx  AgentWonder_Phase1_Intro.pptx  agentic_workflow_epics_stories_v1.xlsx  ai_industry_trends_team_journey _v1.pptx  smart_serach_epics_stories_review_v1.xlsx  ~$AgentWonder_Phase1_Intro.pptx
notebooks/: test_agentwonder_flow.ipynb  test_phase2_flows.ipynb  test_v25_flows.ipynb
tests/: conftest.py  test_compiler.py  test_phase2.py  test_runtime.py  test_schemas.py  test_templates.py  test_v25.py
(+14 files in other folders)
